<resources>
    <string name="app_name">Splash</string>


    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Continue</string>
    <string name="forgot">Forgot Password</string>
    <string name="register">Register</string>
    <string name="label_loading">Loading...</string>
</resources>
